docs(engine): add Javadoc for core engine classes and methods
- Added detailed Javadoc to all core engine classes, including `ConflictSolver`, `Abbreviations`, `Seps`, `DatePatterns`, `Marker`, `OutputPhase`, `PatternMatcher`, `Pipeline`, `ParseContext`, `Extractor`, and others.
- Enhanced method-level documentation with behavior, parameter explanations, and processing details for improved clarity and maintainability.
- Aligned Javadoc conventions and examples with the Python implementation where applicable for parity.