@@ -12,32 +12,48 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.function.Consumer;
 
+/**
+ * Assembles {@link ParseContext#result} from the surviving matches.
+ *
+ * <p>Matches are first grouped by name and ordered by start position, so that
+ * properties expressed as lists (multiple seasons, multiple episodes,
+ * multiple languages) preserve their input order. Each group is routed to a
+ * typed setter on {@code GuessResultBuilder}; unrecognised names land in
+ * {@code extras}.
+ *
+ * <p>Type coercion (string → int, raw value → {@code Language} /
+ * {@code Country} / {@code Quantity} / {@code LocalDate}) and field shape
+ * (scalar vs list) live in this single class, deliberately decoupled from
+ * the extractors that produced the values.
+ */
 public final class OutputBuilder implements Consumer<ParseContext> {
     @Override
     public void accept(ParseContext ctx) {
         var b = ctx.resultBuilder;
+        // LinkedHashMap preserves the first-seen name order, which makes the
+        // order in `extras` deterministic when matches contribute unknown keys.
         var grouped = new LinkedHashMap<String, List<Match>>();
         ctx.matches.all().sorted(java.util.Comparator.comparingInt(Match::start)).forEach(m ->
-            grouped.computeIfAbsent(m.name(), k -> new ArrayList<>()).add(m));
+            grouped.computeIfAbsent(m.name(), _ -> new ArrayList<>()).add(m));
 
         var extras = new LinkedHashMap<String, Object>();
         for (var e : grouped.entrySet()) {
             switch (e.getKey()) {
-                case "title" -> b.title(asString(e.getValue().get(0)));
-                case "alternative_title" -> b.alternativeTitle(asString(e.getValue().get(0)));
-                case "year" -> b.year(asInt(e.getValue().get(0)));
-                case "date" -> b.date((LocalDate) e.getValue().get(0).value());
+                case "title" -> b.title(asString(e.getValue().getFirst()));
+                case "alternative_title" -> b.alternativeTitle(asString(e.getValue().getFirst()));
+                case "year" -> b.year(asInt(e.getValue().getFirst()));
+                case "date" -> b.date((LocalDate) e.getValue().getFirst().value());
                 case "season" -> applyIntList(e.getValue(), b::season, b::seasonList);
                 case "episode" -> applyIntList(e.getValue(), b::episode, b::episodeList);
-                case "episode_count" -> b.episodeCount(asInt(e.getValue().get(0)));
-                case "season_count" -> b.seasonCount(asInt(e.getValue().get(0)));
-                case "episode_title" -> b.episodeTitle(asString(e.getValue().get(0)));
-                case "episode_format" -> b.episodeFormat(asString(e.getValue().get(0)));
-                case "type" -> b.type(asString(e.getValue().get(0)));
+                case "episode_count" -> b.episodeCount(asInt(e.getValue().getFirst()));
+                case "season_count" -> b.seasonCount(asInt(e.getValue().getFirst()));
+                case "episode_title" -> b.episodeTitle(asString(e.getValue().getFirst()));
+                case "episode_format" -> b.episodeFormat(asString(e.getValue().getFirst()));
+                case "type" -> b.type(asString(e.getValue().getFirst()));
                 case "language" -> b.language(asLangList(e.getValue()));
                 case "subtitle_language" -> b.subtitleLanguage(asLangList(e.getValue()));
                 case "country" -> b.country(asCountryList(e.getValue()));
-                case "source" -> b.source(asString(e.getValue().get(0)));
+                case "source" -> b.source(asString(e.getValue().getFirst()));
                 case "other" -> b.other(asStringList(e.getValue()));
                 case "video_codec" -> b.videoCodec(dedupedStringList(e.getValue()));
                 case "audio_codec" -> b.audioCodec(dedupedStringList(e.getValue()));
@@ -45,27 +61,27 @@ public final class OutputBuilder implements Consumer<ParseContext> {
                 case "audio_profile" -> b.audioProfile(dedupedStringList(e.getValue()));
                 case "video_profile" -> b.videoProfile(dedupedStringList(e.getValue()));
                 case "video_api" -> b.videoApi(dedupedStringList(e.getValue()));
-                case "screen_size" -> b.screenSize(asString(e.getValue().get(0)));
-                case "aspect_ratio" -> b.aspectRatio(asDouble(e.getValue().get(0)));
-                case "frame_rate" -> b.frameRate(asFrameRate(e.getValue().get(0)));
-                case "bit_rate" -> b.bitRate((Quantity) e.getValue().get(0).value());
-                case "size" -> b.size((Quantity) e.getValue().get(0).value());
-                case "container" -> b.container(asString(e.getValue().get(0)));
-                case "mimetype" -> b.mimetype(asString(e.getValue().get(0)));
-                case "release_group" -> b.releaseGroup(asString(e.getValue().get(0)));
-                case "streaming_service" -> b.streamingService(asString(e.getValue().get(0)));
-                case "website" -> b.website(asString(e.getValue().get(0)));
-                case "edition" -> b.edition(asString(e.getValue().get(0)));
-                case "cd" -> b.cd(asInt(e.getValue().get(0)));
-                case "cd_count" -> b.cdCount(asInt(e.getValue().get(0)));
-                case "part" -> b.part(asInt(e.getValue().get(0)));
-                case "version" -> b.version(asInt(e.getValue().get(0)));
-                case "film" -> b.film(asInt(e.getValue().get(0)));
-                case "film_title" -> b.filmTitle(asString(e.getValue().get(0)));
-                case "bonus" -> b.bonus(asInt(e.getValue().get(0)));
-                case "bonus_title" -> b.bonusTitle(asString(e.getValue().get(0)));
-                case "crc32" -> b.crc32(asString(e.getValue().get(0)));
-                default -> extras.put(e.getKey(), e.getValue().size() == 1 ? e.getValue().get(0).value()
+                case "screen_size" -> b.screenSize(asString(e.getValue().getFirst()));
+                case "aspect_ratio" -> b.aspectRatio(asDouble(e.getValue().getFirst()));
+                case "frame_rate" -> b.frameRate(asFrameRate(e.getValue().getFirst()));
+                case "bit_rate" -> b.bitRate((Quantity) e.getValue().getFirst().value());
+                case "size" -> b.size((Quantity) e.getValue().getFirst().value());
+                case "container" -> b.container(asString(e.getValue().getFirst()));
+                case "mimetype" -> b.mimetype(asString(e.getValue().getFirst()));
+                case "release_group" -> b.releaseGroup(asString(e.getValue().getFirst()));
+                case "streaming_service" -> b.streamingService(asString(e.getValue().getFirst()));
+                case "website" -> b.website(asString(e.getValue().getFirst()));
+                case "edition" -> b.edition(asString(e.getValue().getFirst()));
+                case "cd" -> b.cd(asInt(e.getValue().getFirst()));
+                case "cd_count" -> b.cdCount(asInt(e.getValue().getFirst()));
+                case "part" -> b.part(asInt(e.getValue().getFirst()));
+                case "version" -> b.version(asInt(e.getValue().getFirst()));
+                case "film" -> b.film(asInt(e.getValue().getFirst()));
+                case "film_title" -> b.filmTitle(asString(e.getValue().getFirst()));
+                case "bonus" -> b.bonus(asInt(e.getValue().getFirst()));
+                case "bonus_title" -> b.bonusTitle(asString(e.getValue().getFirst()));
+                case "crc32" -> b.crc32(asString(e.getValue().getFirst()));
+                default -> extras.put(e.getKey(), e.getValue().size() == 1 ? e.getValue().getFirst().value()
                     : e.getValue().stream().map(Match::value).toList());
             }
         }
@@ -99,9 +115,14 @@ public final class OutputBuilder implements Consumer<ParseContext> {
     }
     private static List<Language> asLangList(List<Match> ms) { return ms.stream().map(m -> (Language) m.value()).toList(); }
     private static List<Country> asCountryList(List<Match> ms) { return ms.stream().map(m -> (Country) m.value()).toList(); }
-    private static void applyIntList(List<Match> ms, java.util.function.Consumer<Integer> single,
-                                     java.util.function.Consumer<List<Integer>> list) {
-        if (ms.size() == 1) single.accept(asInt(ms.get(0)));
+    /**
+     * Routes a single integer match to the scalar setter and 2+ matches to the
+     * list setter. Mirrors guessit's behaviour where a single episode appears
+     * as {@code episode: 5} but multiple episodes appear as {@code episode: [5, 6]}.
+     */
+    private static void applyIntList(List<Match> ms, Consumer<Integer> single,
+                                     Consumer<List<Integer>> list) {
+        if (ms.size() == 1) single.accept(asInt(ms.getFirst()));
         else list.accept(ms.stream().map(OutputBuilder::asInt).toList());
     }
 }
